# Roota

./: PRODUCTION_READINESS_REPORT.md
.github/workflows/: backend.yml  frontend.yml  main.yml
Backend/: .gitignore  build.sh  nixpacks.toml  pyproject.toml  railway.json
Backend/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Backend/accounts/management/commands/: create_superuser.py
Backend/accounts/migrations/: 0001_initial.py  0002_workerprofile_is_verified_workerprofile_location_and_more.py  0003_user_phone.py  0004_employerprofile_bio.py
Backend/config/: settings.py  urls.py
Backend/jobs/: models.py  serializers.py  urls.py  views.py
Backend/jobs/migrations/: 0001_initial.py
Backend/wallets/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
Backend/wallets/migrations/: 0001_initial.py  0002_remove_virtualaccount_account_name_and_more.py  0003_transaction_recipient_account_and_more.py
Backend/wallets/services/: squad.py
Frontend/: API_UTILITY_GUIDE.md  IMPLEMENTATION_PROGRESS.md  PRODUCTION_READINESS_AUDIT.md  SESSION_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx  main.tsx  roota.css  screens.tsx  styles.css
Frontend/src/components/cards/: InsightCard.tsx  JobCard.tsx  ProfileHero.tsx  SkillProgressCard.tsx  (+2 more)
Frontend/src/context/: AuthContext.tsx
Frontend/src/layouts/: AppShell.tsx  MobileBottomNav.tsx  Sidebar.tsx  TopNavbar.tsx  WorkspaceShell.tsx
Frontend/src/styles/: globals.css  globals.css.bak
Frontend/src/utils/: api.ts
(+71 files in other folders)
